--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ CMD ["nginx", "-g", "daemon off;"]
 
 <section>
 	<h2>Want to learn more?</h2>
-	http://www.dockertalk.zonoff.com
+	<a href="http://jonbrouse.github.io/docker-intro">jonbrouse.github.io/docker-intro</a>
 	<div style="position: absolute; left: 1%; top: 160px; width: 48%;" class="absolute-element">
 		<p><b>Resources</b></p>
 		<ul style="text-align: left; line-height=1.1em;">
