--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ CMD ["nginx", "-g", "daemon off;"]
 </section>
 
 <section>
-	<h2>The Basics of a Docker System</h2>
+	<h2>The Flow of a Docker System</h2>
 	<p>
 		<img src="docker-img/basics-of-docker-system.png">
 	</p>
